cleanups for java 13 tests